@@ -37,6 +37,7 @@ class TestByteVector : public CppUnit::TestFixture
   CPPUNIT_TEST(testFind2);
   CPPUNIT_TEST(testRfind1);
   CPPUNIT_TEST(testRfind2);
+  CPPUNIT_TEST(testToHex);
   CPPUNIT_TEST_SUITE_END();
 
 public:
@@ -171,6 +172,13 @@ public:
     CPPUNIT_ASSERT_EQUAL(10, r4.rfind("OggS", 0));
     CPPUNIT_ASSERT_EQUAL(5, r4.rfind("OggS", 7));
     CPPUNIT_ASSERT_EQUAL(10, r4.rfind("OggS", 12));
+  }
+
+  void testToHex()
+  {
+    ByteVector v("\xf0\xe1\xd2\xc3\xb4\xa5\x96\x87\x78\x69\x5a\x4b\x3c\x2d\x1e\x0f", 16);
+
+    CPPUNIT_ASSERT_EQUAL(ByteVector("f0e1d2c3b4a5968778695a4b3c2d1e0f"), v.toHex());
   }
 
 };
